name:                wheel
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/patrickboe/wheel#readme
license:             GPL-3
license-file:        COPYING.txt
author:              Patrick Boe
maintainer:          patrickboe+wheel@gmailNOSPAM.com.bleh
copyright:           2016 Patrick Boe
category:            Web
build-type:          Simple
extra-source-files:  routes
cabal-version:       >=1.10

library
  hs-source-dirs:      src/lib/hs
  exposed-modules:     Api
                       Users
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , servant-server >= 0.4.4 && < 0.5
                     , either
                     , text
                     , wai
                     , warp
                     , mtl
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -fwarn-tabs -O2
  default-extensions:  DataKinds
                     , DeriveGeneric
                     , TypeOperators

executable wheel-exe
  hs-source-dirs:      src/main/hs
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -fwarn-tabs -O2
  build-depends:       base
                     , wheel
  default-language:    Haskell2010

test-suite wheel-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      src/test/hs
  main-is:             Spec.hs
  build-depends:       base
                     , hspec >= 2.0.0
                     , wheel
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -fwarn-tabs -O2
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/patrickboe/wheel
